# porth-low-latency-showcase

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  porth_perf_suite.cpp
configs/: newport_default.json
enterprise/: PorthEmulatedDevice.hpp  PorthHardwareScanner.hpp  PorthSimDevice.hpp  PorthSimPHY.hpp
examples/: CMakeLists.txt  main_demo.cpp
include/porth/: IPhysicsModel.hpp  PorthClock.hpp  PorthDeviceLayout.hpp  PorthDriver.hpp  PorthHugePage.hpp  PorthMetric.hpp  PorthNetworkPortal.hpp  PorthPDK.hpp  PorthRegister.hpp  PorthRingBuffer.hpp  PorthSentinel.hpp  PorthShuttle.hpp  PorthTelemetry.hpp  PorthUtil.hpp  PorthVFIODevice.hpp  PorthXDPPortal.hpp  StubPhysics.hpp  porth_xdp_kern.c
scripts/: bench.sh  build.sh  check.sh  setup_hugepages.sh
tests/: CMakeLists.txt  test_safety_trip.cpp  test_sim_chaos.cpp
